<resources>
    <string name="app_name">TravelIn</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">User name</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="sign">Signup</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sname">Name</string>
    <string name="smobile">Mobile</string>
    <string name="smail">example@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="search">Search Place</string>
    <string name="title_activity_selectedcity">Selectedcity</string>
    <string name="title_activity_splashscreen">TravelIn</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_selected_category">SelectedCategory</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
