<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/travelone"
    tools:context="com.gpslocation.travelin.SignupActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/sname"
        android:background="@drawable/edittextstyle"
        android:singleLine="true"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:background="@drawable/edittextstyle"
        android:singleLine="true"
        android:paddingLeft="10dp"
        android:hint="@string/smobile"
        />

    <EditText
        android:id="@+id/mail"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/mobile"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:hint="@string/smail"
        android:background="@drawable/edittextstyle"
        android:paddingLeft="10dp"  />

    <EditText
        android:id="@+id/susername"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/mail"
        android:layout_marginTop="10dp"
        android:hint="@string/user"
        android:background="@drawable/edittextstyle"
        android:singleLine="true"
        android:paddingLeft="10dp"  />

    <EditText
        android:id="@+id/spassword"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/susername"
        android:layout_marginTop="10dp"
        android:hint="@string/pass"
        android:password="true"
        android:background="@drawable/edittextstyle"
        android:singleLine="true"
        android:paddingLeft="10dp"  />

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@drawable/buttonstyle"
        android:textSize="20dp" />

</RelativeLayout>
