<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/travelone"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LogInActivity">

   <EditText
       android:id="@+id/lusername"
       android:layout_width="fill_parent"
       android:layout_height="60dp"
       android:hint="@string/user"
       android:layout_marginTop="100dp"
       android:paddingLeft="10dp"
       android:background="@drawable/edittextstyle"
       android:singleLine="true"
       />
    <EditText
        android:id="@+id/lpassword"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:hint="@string/pass"
        android:layout_below="@+id/lusername"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:paddingLeft="10dp"
        android:background="@drawable/edittextstyle"
        android:password="true"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/lpassword"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:background="@drawable/buttonstyle"
            />
        <Button
            android:id="@+id/signup"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textSize="20dp"
            android:background="@drawable/buttonstyle"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
</RelativeLayout>
